force-app/main/default/objects/CarConfig_Quote__c/CarConfig_Quote__c.object-meta.xml
<CustomObject>
    <description>온라인에서 견적내기 했을 때 생기는 견적서</description>
    <label>CarConfig Quote</label>
    <nameField>
        <label>CarConfigQuote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CarConfigQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>