force-app/main/default/objects/CarConfig_Quote__c/fields/Car_Name__c.field-meta.xml
<CustomField>
    <fullName>Car_Name__c</fullName>
    <description>차량 모델 이름</description>
    <label>Car Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>