force-app/main/default/objects/CarConfig_Quote__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>CarConfigQuotes1</relationshipName>
    <type>Lookup</type>
</CustomField>