force-app/main/default/objects/CarConfig_Quote__c/fields/Option_Summary__c.field-meta.xml
<CustomField>
    <fullName>Option_Summary__c</fullName>
    <label>Option Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>