force-app/main/default/objects/CarConfig_Quote__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trim</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>CarConfigQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>